--- a/wordpress/wp-content/themes/lawyerdirectory/style.css
+++ b/wordpress/wp-content/themes/lawyerdirectory/style.css
@@ -1,3 +1,2 @@
-/*! Css Main Stylesheet isn't meant to update, please use the scss partials in /css/scss */
-/*! Theme Name: Lawyers
+/* Theme Name: Lawyer Directory
 		Author: Garrett Cullen */
